nuovo font nome

--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ footer.page-footer {
 }
 
 .brand-logo {
-  font-family: 'Indie Flower', cursive;
+  font-family: 'Courgette', cursive;
   font-weight: 600;
 }
 
